--- a/index.html
+++ b/index.html
@@ -4,47 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accueil Ada Lovelace</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
 </head>
 
 <body>
+    <footer class="footer" role="contentinfo">
+        <div class="footer__left">
+            <div class="footer__logo">
+                <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+            </div>
+            <div class="footer__leftelement">
+                <p>CONTACT</p>
+                <div class="footer__leftelement-text">
+                    <p>Virgile Esnaux <br> MMi1 B2 <br> virgile.esnaux@edu.univ-fcomte.fr</p>
+                </div>
+            </div>
+            <div class="footer__leftelement">
+                <p>MENTIONS LÉGALES</p>
+                <div class="footer__leftelement-text">
+                    <p>"projet de festival réalisé en 2025 dans le cadre d'un exercice pédagogique au département
+                        MMi de
+                        Montbéliard"</p>
+                </div>
+            </div>
+        </div>
 
+        <div class="footer__right">
+            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
+            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
+            <a href="a-propos.html" class="footer__rightelement">À propos</a>
+            <a href="infos-pratiques.html" class="footer__rightelement">Autres Projets</a>
+            <div class="footer__division"></div>
+            <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
+                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
+                <img src="/assets/img/MMI_logo.svg" alt="Logo MMi">
+            </a>
+        </div>
+    </footer>
 </body>
-
-<footer class="footer" role="contentinfo">
-    <div class="footer__left">
-        <div class="footer__logo">
-            <span class="footer__logo-left">JUMELAGES</span>
-            <span class="footer__logo-leftfestival">FESTIVAL</span>
-        </div>
-        <div class="footer__leftelement">
-            <p>CONTACT</p>
-            <div class="footer__leftelement-text">
-                <p>Virgile Esnaux <br> MMi1 B2 <br> virgile.esnaux@edu.univ-fcomte.fr</p>
-            </div>
-        </div>
-        <div class="footer__leftelement">
-            <p>MENTIONS LÉGALES</p>
-            <div class="footer__leftelement-text">
-                <p>"projet de festival réalisé en 2025 dans le cadre d'un exercice pédagogique au département
-                    MMi de
-                    Montbéliard"</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="footer__right">
-        <a href="programmation.html" class="footer__rightelement">Festival</a>
-        <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-        <a href="a-propos.html" class="footer__rightelement">À propos</a>
-        <a href="infos-pratiques.html" class="footer__rightelement">Infos pratiques</a>
-        <div class="footer__division"></div>
-        <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-            rel="noopener noreferrer" class="footer__logoMMi"
-            aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-            <img src="/assets/icon/MMI_logo.svg" alt="Logo MMi">
-        </a>
-    </div>
-</footer>
 
 </html>
