Ajout du header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <header>
+        <section class="header_logo">
+            <div class="header_logo-block">
+                <img class="header_logo-image" src="/assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <div class="header_logo-composant"></div>
+                <div class="header_logo-ada">
+                    <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                </div>
+            </div>
+        </section>
+    </header>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
@@ -25,9 +36,8 @@
             <div class="footer__leftelement">
                 <p>MENTIONS LÉGALES</p>
                 <div class="footer__leftelement-text">
-                    <p>"projet de festival réalisé en 2025 dans le cadre d'un exercice pédagogique au département
-                        MMi de
-                        Montbéliard"</p>
+                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
+                        Montbéliard“</p>
                 </div>
             </div>
         </div>
