--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="hero">
+            <div class="hero_accueil">
+                <img src="/assets/img/hero_page_accueil.avif" alt="Hero de la page d'accueil">
+            </div>
+        </section>
+    </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
