Changement du hero + commencement de la rédaction de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -23,9 +23,33 @@
         </section>
     </header>
     <main>
+        <h1 class="visually-hidden">Page d'accueil de Ada Lovelace</h1>
         <section class="hero">
-            <div class="hero_accueil">
+            <div class="hero__accueil">
                 <img src="/assets/img/hero_page_accueil.avif" alt="Hero de la page d'accueil">
+            </div>
+        </section>
+        <section class="citation">
+            <blockquote>
+                <p>« Ce cerveau qui est le mien est quelque chose de plus que simplement mortel, comme le temps le
+                    montrera. »</p>
+            </blockquote>
+        </section>
+        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
+        <section class="Texte__principal-accueil">
+            <div class="navyblue__block">
+                <p>Les femmes ont toujours joué un rôle crucial dans la science, pourtant leur
+                    contribution a fréquemment été minimisée, oubliée ou attribuée à tort à des collègues masculins.
+                    Cette
+                    injustice historique, encore perceptible aujourd’hui, alimente une sous-représentation persistante
+                    des
+                    femmes dans la recherche et dans la médiatisation de leurs découvertes.
+                <p>Parmi ces figures oubliées, Ada Lovelace se distingue comme une pionnière majeure. Née en 1815, elle
+                    est
+                    la fille du célèbre poète Lord Byron et d’une mère passionnée de mathématiques, qui lui transmet un
+                    goût
+                    précoce pour les sciences. Ada Lovelace se forme auprès de grands mathématiciens de son temps, dont
+                    Charles Babbage, inventeur de la machine analytique, un ancêtre de l’ordinateur moderne.</p>
             </div>
         </section>
     </main>
