ajout intégration vidéo + titre article accueil

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                     Charles Babbage, inventeur de la machine analytique, un ancêtre de l’ordinateur moderne.</p>
             </div>
         </section>
+        <section class="youtube_video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/l69wsNx3XlY?si=wccYRUfVNLHGEpKD"
+                title="YouTube video player" frameborder="0" allow="web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <section class="section__title">
+            <h2>Articles :</h2>
+        </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
