ajout du carousel

--- a/index.html
+++ b/index.html
@@ -60,6 +60,64 @@
         <section class="section__title">
             <h2>Articles :</h2>
         </section>
+        <section class="carousel">
+            <div class="carousel__container">
+                <a href="adalovelace.html" aria-label="Lien vers l'article sur Ada Lovelace">
+                    <article class="card">
+                        <img src="/assets/img/card1.avif" alt="Première carte du carousel">
+                        <div class="card__content">
+                            <h3 class="card__title">Ada Lovelace</h3>
+                            <p class="card__text">Découvrez la vie et les contributions d'Ada Lovelace, pionnière de
+                                l'informatique.</p>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="effetmatilda.html" aria-label="Lien vers l'article sur l'effet Matilda">
+                    <article class="card">
+                        <img src="/assets/img/card2.avif" alt="Deuxième carte du carousel">
+                        <div class="card__content">
+                            <h3 class="card__title">L'Effet Matilda</h3>
+                            <p class="card__text">Découvrez les implications de l'effet Matilda, un biais historique qui
+                                a minimisé les contributions des femmes scientifiques.</p>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="scienceada.html" aria-label="Lien vers l'article sur la science d'Ada Lovelace">
+                    <article class="card">
+                        <img src="/assets/img/card3.avif" alt="Troisième carte du carousel">
+                        <div class="card__content">
+                            <h3 class="card__title">La science d'Ada</h3>
+                            <p class="card__text">Découvrez les inventions d'Ada Lovelace et son impact sur
+                                l'informatique moderne.</p>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="theimitationgame.html" aria-label="Lien vers l'article sur The Imitation Game">
+                    <article class="card">
+                        <img src="/assets/img/card4.avif" alt="Quatrième carte du carousel">
+                        <div class="card__content">
+                            <h3 class="card__title">The Imitation Game</h3>
+                            <p class="card__text">Découvrez le film "The Imitation Game", qui raconte l'histoire d'Alan
+                                Turing et de la machine de décryptage pendant la Seconde Guerre mondiale.</p>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="litterature.html" aria-label="Lien vers l'article sur Ada dans la littérature">
+                    <article class="card">
+                        <img src="/assets/img/card5.avif" alt="Cinquième carte du carousel">
+                        <div class="card__content">
+                            <h3 class="card__title">Ada dans la littérature</h3>
+                            <p class="card__text">L'histoire d'Ada Lovelace a inspiré de nombreux ouvrages littéraires
+                                et biographies.</p>
+                        </div>
+                    </article>
+                </a>
+            </div>
+        </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
