--- a/index.html
+++ b/index.html
@@ -10,6 +10,62 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
 </head>
 
+<nav class="menu">
+    <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <span class="menu__bar"></span>
+        <span class="menu__bar"></span>
+        <span class="menu__bar"></span>
+    </button>
+
+    <div class="menu__overlay">
+        <ul class="menu__list">
+            <li>
+                <a href="index.html" class="menu__button">
+                    <img src="/assets/img/card1.avif" alt="" class="menu__icon">
+                    <span>Page d'accueil</span>
+                </a>
+            </li>
+            <li>
+                <a href="adalovelace.html" class="menu__button">
+                    <img src="/assets/img/card1.avif" alt="" class="menu__icon">
+                    <span>Ada Lovelace</span>
+                </a>
+            </li>
+            <li>
+                <a href="effetmatilda.html" class="menu__button">
+                    <img src="/assets/img/card2.avif" alt="" class="menu__icon">
+                    <span>L'effet Matilda</span>
+                </a>
+            </li>
+            <li>
+                <a href="scienceada.html" class="menu__button">
+                    <img src="/assets/img/card3.avif" alt="" class="menu__icon">
+                    <span>La science d'Ada</span>
+                </a>
+            </li>
+            <li>
+                <a href="theimitationgame.html" class="menu__button">
+                    <img src="/assets/img/card4.avif" alt="" class="menu__icon">
+                    <span>The Imitation Game</span>
+                </a>
+            </li>
+            <li>
+                <a href="litterature.html" class="menu__button">
+                    <img src="/assets/img/card5.avif" alt="" class="menu__icon">
+                    <span>Ada dans la littérature</span>
+                </a>
+            </li>
+        </ul>
+
+        <div class="menu__footer">
+            <a href="glossaire.html" class="menu__footer-link">Glossaire</a>
+            <a href="contact.html" class="menu__footer-link">Contactez-nous</a>
+            <a href="a-propos.html" class="menu__footer-link">À propos</a>
+            <a href="infos-pratiques.html" class="menu__footer-link">Autres projets</a>
+        </div>
+    </div>
+</nav>
+
 <body>
     <header>
         <section class="header_logo">
@@ -151,6 +207,7 @@
             </a>
         </div>
     </footer>
+    <script src="src/js/script.js"></script>
 </body>
 
 </html>
