--- a/index.html
+++ b/index.html
@@ -20,38 +20,35 @@
     <div class="menu__overlay">
         <ul class="menu__list">
             <li>
-                <a href="index.html" class="menu__button">
-                    <img src="/assets/img/card1.avif" alt="" class="menu__icon">
+                <a href="index.html" class="menu__button"
+                    style="background-image: url('/assets/img/hero_page_accueil2.avif')">
                     <span>Page d'accueil</span>
                 </a>
             </li>
             <li>
-                <a href="adalovelace.html" class="menu__button">
-                    <img src="/assets/img/card1.avif" alt="" class="menu__icon">
+                <a href="adalovelace.html" class="menu__button" style="background-image: url('/assets/img/card1.avif')">
                     <span>Ada Lovelace</span>
                 </a>
             </li>
             <li>
-                <a href="effetmatilda.html" class="menu__button">
-                    <img src="/assets/img/card2.avif" alt="" class="menu__icon">
+                <a href="effetmatilda.html" class="menu__button"
+                    style="background-image: url('/assets/img/card2.avif')">
                     <span>L'effet Matilda</span>
                 </a>
             </li>
             <li>
-                <a href="scienceada.html" class="menu__button">
-                    <img src="/assets/img/card3.avif" alt="" class="menu__icon">
+                <a href="scienceada.html" class="menu__button" style="background-image: url('/assets/img/card3.avif')">
                     <span>La science d'Ada</span>
                 </a>
             </li>
             <li>
-                <a href="theimitationgame.html" class="menu__button">
-                    <img src="/assets/img/card4.avif" alt="" class="menu__icon">
+                <a href="theimitationgame.html" class="menu__button"
+                    style="background-image: url('/assets/img/card4.avif')">
                     <span>The Imitation Game</span>
                 </a>
             </li>
             <li>
-                <a href="litterature.html" class="menu__button">
-                    <img src="/assets/img/card5.avif" alt="" class="menu__icon">
+                <a href="litterature.html" class="menu__button" style="background-image: url('/assets/img/card5.avif')">
                     <span>Ada dans la littérature</span>
                 </a>
             </li>
