--- a/adalovelace.html
+++ b/adalovelace.html
@@ -93,6 +93,26 @@
                 <img src="/assets/img/hero_page_Ada.avif" alt="Hero de la page d'Ada Lovelace">
             </div>
         </section>
+        <section class="section__title">
+            <h2>Qui est Ada Lovelace ?</h2>
+        </section>
+        <section class="info-block">
+            <h3 class="info-block__title">Informations sur cette personne</h3>
+            <div class="info-block__wrapper">
+                <div class="info-block__image">
+                    <img src="/assets/img/Image1_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
+                    <img src="/assets/img/signature.svg" alt="Signature d'Ada Lovelace" loading="lazy">
+                </div>
+                <div class="info-block__content">
+                    <p><strong>Nom:</strong> Ada Lovelace</p>
+                    <p><strong>Nom complet:</strong> Augusta Ada King, comtesse de Lovelace</p>
+                    <p><strong>Née:</strong> 10 décembre 1815, Londres</p>
+                    <p><strong>Mort:</strong> 27 novembre 1852, Londres</p>
+                    <p><strong>Nationalité:</strong> Britannique</p>
+                    <p><strong>Profession:</strong> Mathématicienne, pionnière de l'informatique</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
