--- a/adalovelace.html
+++ b/adalovelace.html
@@ -113,6 +113,51 @@
                 </div>
             </div>
         </section>
+        <section class="info-block__purple">
+            <h3 class="info-block__title">La naissance de Ada Lovelace</h3>
+            <div class="info-block__wrapper">
+                <div class="info-block__image--purple">
+                    <img src="/assets/img/Image2_page_Ada.avif" alt="Histoire d'Ada Lovelace" loading="lazy">
+                </div>
+                <div class="info-block__content">
+                    <p>Fille du célèbre poète Lord Byron et de Lady Annabella Milbanke, fervente passionnée de
+                        mathématiques, Ada reçoit une éducation scientifique rare pour une femme de son époque, sa mère
+                        souhaitant l’éloigner du tempérament romantique de son père.</p>
+                </div>
+            </div>
+        </section>
+        <section class="info-leftblock__purple">
+            <h3 class="info-leftblock__title">La naissance de Ada Lovelace</h3>
+            <div class="info-leftblock__wrapper">
+                <div class="info-leftblock__image--purple">
+                    <img src="/assets/img/Image3_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
+                </div>
+                <div class="info-leftblock__content">
+                    <p>Dès son adolescence, Ada démontre un grand talent pour les mathématiques. En 1832, elle
+                        rencontre Mary Somerville, scientifique écossaise reconnue, qui devient son mentor. C’est par
+                        son intermédiaire qu’elle fait la connaissance de Charles Babbage, inventeur de la machine à
+                        différences puis de la machine analytique, considérée comme le premier modèle d’ordinateur.</p>
+                </div>
+            </div>
+        </section>
+        <section class="citation">
+            <blockquote>
+                <p>« Mon travail mathématique implique une imagination considérable. »</p>
+            </blockquote>
+        </section>
+        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
+        <section class="image__Ada-Charles">
+            <img src="/assets/img/Image4_page_Ada.avif" alt="Image d'Ada Lovelace et Charles Babbage" loading="lazy">
+        </section>
+        <section class="text__main">
+            <h2 class="textmono-title">Pourquoi est-elle connue?
+                <h3 class="textmono-content">Ada Lovelace, pionnière britannique des mathématiques et de l’informatique,
+                    est célèbre pour avoir réalisé le premier véritable programme informatique. Entre 1842 et 1843, elle
+                    travaille aux côtés de Charles Babbage sur son ambitieux projet de machine analytique, un dispositif
+                    mécanique capable d’exécuter des calculs complexes et de suivre des instructions enregistrées sur
+                    des cartes perforées, ancêtre des ordinateurs modernes</h3>
+            </h2>
+        </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
