Page Effet Matilda Fini

--- a/adalovelace.html
+++ b/adalovelace.html
@@ -146,7 +146,7 @@
             </blockquote>
         </section>
         <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
-        <section class="image__Ada-Charles">
+        <section class="image__representation">
             <img src="/assets/img/Image4_page_Ada.avif" alt="Image d'Ada Lovelace et Charles Babbage" loading="lazy">
         </section>
         <section class="text__main">
