--- a/effetmatilda.html
+++ b/effetmatilda.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">Ada <br> Lovelace</h1>
+        <h1 class="header__title">L'Effet <br> Matilda</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
             <a href="/en/" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
