Page Science Ada fini

--- a/effetmatilda.html
+++ b/effetmatilda.html
@@ -96,7 +96,7 @@
         <section class="section__title">
             <h2>Qu’est ce que l’effet Matilda ?</h2>
         </section>
-        <section class="Texte__principal-accueil">
+        <section class="Texte__principal-effet">
             <div class="navyblue__block">
                 <div class="textmono-title">L’effet Matilda en bref</div>
                 <p>L’effet Matilda désigne le fait que les femmes scientifiques voient souvent leurs travaux minimisés
