Commancemant page imitation game

--- a/adalovelace.html
+++ b/adalovelace.html
@@ -89,7 +89,7 @@
 
     <main>
         <section class="hero">
-            <div class="hero__accueil">
+            <div class="hero__ada">
                 <img src="/assets/img/hero_page_Ada.avif" alt="Hero de la page d'Ada Lovelace">
             </div>
         </section>
