--- a/effetmatilda.html
+++ b/effetmatilda.html
@@ -89,7 +89,7 @@
 
     <main>
         <section class="hero">
-            <div class="hero__accueil">
+            <div class="hero__effet">
                 <img src="/assets/img/hero_page_Effet.avif" alt="Hero de la page de l'effet Matilda">
             </div>
         </section>
