--- a/theimitationgame.html
+++ b/theimitationgame.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">La Science <br> d'Ada</h1>
+        <h1 class="header__minititle">The Imitation <br> Game</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
             <a href="/en/" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
@@ -88,62 +88,10 @@
     </nav>
 
     <main>
-        <section class="hero">
-            <div class="hero__science">
-                <img src="/assets/img/hero_page_Science.avif" alt="Hero de la page de la science d'Ada Lovelace">
+        <section class="hero-imitationgame">
+            <div class="hero__imitation">
+                <img src="/assets/img/hero_page_Imitation.avif" alt="Hero de la page de The Imitation Game">
             </div>
-        </section>
-        <section class="section__title">
-            <h2>Qu’a t’elle crée?</h2>
-        </section>
-        <section class="Texte__principal-science">
-            <div class="navyblue__block">
-                <div class="textmono-title">Son innovation</div>
-                <p>Ada Lovelace a créé le tout premier programme informatique en 1843, conçu pour être exécuté sur la
-                    machine analytique de Charles Babbage.
-                    Concrètement, elle a rédigé un algorithme permettant à la machine de calculer les nombres de
-                    Bernoulli, posant ainsi les bases de la programmation moderne. Dans ses fameuses Notes, elle a aussi
-                    anticipé le potentiel des machines à traiter non seulement des nombres, mais aussi des symboles, de
-                    la musique ou des images, démontrant une vision révolutionnaire de l’informatique.</p>
-            </div>
-        </section>
-        <section class="image__representation">
-            <img src="/assets/img/Image1_page_Science.avif" alt="Image de la machine analytique" loading="lazy">
-        </section>
-        <section class="text__main">
-            <h2 class="textmono-title">Comment a-t-elle fait?
-                <h3 class="textmono-content">Chargée de traduire un article rédigé par le mathématicien italien Luigi
-                    Menabrea, Ada y ajoute de nombreuses notes personnelles, trois fois plus longues que le texte
-                    original. Dans la dernière de ces notes, appelée Note G, elle conçoit un algorithme détaillé
-                    permettant à la machine de calculer les nombres de Bernoulli, considéré aujourd’hui comme le premier
-                    programme informatique de l’histoire.</h3>
-            </h2>
-        </section>
-        <section class="image__representation">
-            <img src="/assets/img/Image2_page_Science.avif" alt="Image de la note G" loading="lazy">
-        </section>
-        <section class="citation">
-            <blockquote>
-                <p>« L’imagination est la faculté de découverte, par excellence. C’est celle qui pénètre dans les mondes
-                    invisibles qui nous entourent, les mondes de la science. »»</p>
-            </blockquote>
-        </section>
-        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
-        <section class="info-box">
-            <h3 class="info-box__title">De plus,</h3>
-            <div class="info-box__content">
-                <p>Au-delà de ce programme, Ada Lovelace a envisagé de manière visionnaire que la machine pourrait
-                    manipuler non seulement des nombres, mais aussi des symboles, des lettres, et potentiellement
-                    produire de la musique ou des images, anticipant ainsi le concept moderne d’un ordinateur
-                    polyvalent.</p>
-            </div>
-        </section>
-        <section class="text__main">
-            <h3 class="textmono-content">En plus de ses travaux informatiques, Ada s’est aussi intéressée à la théorie
-                des probabilités, utilisant ses compétences pour des applications pratiques comme les jeux de hasard.
-                Elle a également tenté de soutenir financièrement la construction de la machine analytique, malgré des
-                difficultés économiques.</h3>
-            </h2>
         </section>
     </main>
     <footer class="footer" role="contentinfo">
