Page The Imitation Game Faite

--- a/index.html
+++ b/index.html
@@ -117,10 +117,13 @@
             </div>
         </section>
         <section class="youtube_video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l69wsNx3XlY?si=wccYRUfVNLHGEpKD"
-                title="YouTube video player" frameborder="0" allow="web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
+                <source src="/assets/video/Ada Lovelace - L'invention de l'ordinateur _ Cherchez la femme ! _ ARTE.mp4"
+                    type="video/mp4">
+                Votre navigateur ne supporte pas la lecture de vidéos.
+            </video>
         </section>
+
         <section class="section__title">
             <h2>Articles :</h2>
         </section>
