--- a/theimitationgame.html
+++ b/theimitationgame.html
@@ -93,6 +93,50 @@
                 <img src="/assets/img/hero_page_Imitation.avif" alt="Hero de la page de The Imitation Game">
             </div>
         </section>
+        <section class="section__title">
+            <h2>Quel lien entretiennent le film “The Imitation Game” et Ada Lovelace ?</h2>
+        </section>
+        <section class="Texte__principal-science">
+            <div class="navyblue__block">
+                <div class="textmono-title">Topo du film</div>
+                <p>Le film “The Imitation Game” retrace la vie d’Alan Turing, pionnier de l’informatique, influencé par
+                    les travaux d’Ada Lovelace. Ada Lovelace est citée en lien avec le concept de l’intelligence
+                    artificielle et le fameux “Lovelace’s objection”, où elle affirmait que les machines ne peuvent pas
+                    penser par elles-mêmes, ce qui inspira Turing pour formuler le test du même nom. Leur lien symbolise
+                    deux visions : Lovelace a anticipé la collaboration homme-machine comme un partenariat créatif,
+                    alors que Turing a imaginé le moment où l’intelligence artificielle pourrait rivaliser avec
+                    l’humain.</p>
+            </div>
+        </section>
+        <section class="youtube_video">
+            <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
+                <source
+                    src="/assets/video/IMITATION GAME - Bande Annonce Officielle VF - Benedict Cumberbatch Keira Knightley (2015).mp4"
+                    type="video/mp4">
+                Votre navigateur ne supporte pas la lecture de vidéos.
+            </video>
+        </section>
+        <section class="citation">
+            <blockquote>
+                <p>"Une machine peut faire ce qu’on la programme pour faire, mais cela ne signifie pas qu’elle ne peut
+                    pas nous surprendre."</p>
+            </blockquote>
+        </section>
+        <h2 class="citation__personne">Citation d’Alan Turing</h2>
+        <section class="info-box">
+            <h3 class="info-box__title">Quel lien entre Ada et ce film ?</h3>
+            <div class="info-box__content">
+                <p>Dans le film “The Imitation Game”, Alan Turing travaille avec Joan Clarke, une brillante
+                    mathématicienne qui l’aide à décrypter les messages codés par la machine allemande Enigma. Leur
+                    collaboration est déterminante pour la réussite du projet, et rappelle fortement celle entre Charles
+                    Babbage et Ada Lovelace, un siècle plus tôt, lorsqu’ils ont travaillé ensemble sur la machine
+                    analytique, ancêtre de l’ordinateur.</p>
+            </div>
+        </section>
+        <section class="image__representation">
+            <img src="/assets/img/Image1_page_Imitation.avif" alt="Image d'Alan Turing dans le film The Imitation Game"
+                loading="lazy">
+        </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
