--- a/scienceada.html
+++ b/scienceada.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil Ada Lovelace</title>
+    <title>Science d'Ada</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -81,7 +81,7 @@
                     aria-label="Accéder au formulaire de contact">Contactez-nous</a>
                 <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
                     propos</a>
-                <a href="infos-pratiques.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
                     projets</a>
             </div>
         </div>
@@ -170,7 +170,7 @@
             <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
             <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
             <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="infos-pratiques.html" class="footer__rightelement">Autres Projets</a>
+            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
                 class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
